--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             padding: 10px;
             border-radius: 5px;
             font-size: 14px;
+            border: none;
+            outline: none;
         }
         button:hover
         {
