--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             margin-left: 42%;
             margin-top: 5%;
             background-color: #E4002b;
+            color: white;
+            font-weight: bold;
             padding: 10px;
             border-radius: 5px;
             font-size: 14px;
